GitAssgn/force-app/main/default/objects/Salary_Detail__c/fields/Salary_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Salary_Credit_Date__c</fullName>
    <label>Salary Credit Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>