GitAssgn/force-app/main/default/objects/Salary_Detail__c/fields/Special_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Special_Allowance__c</fullName>
    <label>Special Allowance</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>