GitAssgn/force-app/main/default/objects/Salary_Detail__c/validationRules/Bank_Account_Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Number_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Bank_Account_Number__c )</errorConditionFormula>
    <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
    <errorMessage>Bank Account number once set cannot be changed</errorMessage>
</ValidationRule>