GitAssgn/force-app/main/default/objects/Salary_Detail__c/validationRules/Bank_Details_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Details_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Bank_Details__c )</errorConditionFormula>
    <errorDisplayField>Bank_Details__c</errorDisplayField>
    <errorMessage>Bank account details cannot be null</errorMessage>
</ValidationRule>