GitAssgn/force-app/main/default/objects/Salary_Detail__c/validationRules/Inactive_Emp_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Emp_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Employee__r.Is_Active__c  &lt;&gt; TRUE</errorConditionFormula>
    <errorMessage>Salary cannot be processed for inactive employees..</errorMessage>
</ValidationRule>